feat: prepare for cloud deployment (Vercel, Render, Supabase)

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,9 @@ django-import-export==4.3.9
 sqlparse==0.5.3
 tablib==3.8.0
 typing_extensions==4.14.1
+djangorestframework
+django-cors-headers
+dj-database-url
+psycopg2-binary
+gunicorn
+whitenoise
